--- a/style sheet/style.css
+++ b/style sheet/style.css
@@ -15,6 +15,9 @@ box-sizing: border-box;
 }
 .table{border-radius: 2px;
     box-sizing: border-box;
+    background-color: blanchedalmond;
+
+    
 }
 .btna{
     flex-wrap: wrap;
@@ -26,4 +29,5 @@ box-sizing: border-box;
 .span{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: rgb(244, 197, 135);
+    background-color: rgb(243, 242, 242)
 }
